# framework.fastx.dev

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LANDING.md  MANIFEST.in  Makefile  PUBLISHING.md  README.fastmvc-backup.md  README.md  __init__.py  alembic.ini  app.py  codecov.yml  docker-compose.yml  docker-entrypoint.sh  fast_cli  mkdocs.yml  postman_collection.json  postman_environment.json  py.typed  pyproject.toml  pytest.ini  requirements.txt  start_utils.py
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml  pr-check.yml  publish.yml
_maint/: README.md
_maint/init-scripts/: 01-create-databases.sql
_maint/scripts/: export_postman_collection.py  seed.py
abstractions/: README.md  __init__.py  controller.py  cqrs.py  datastore.py  decorator.py  dependency.py  dependency_factory.py  domain_events.py  dto.py  entity.py  error.py  factory.py  mapper.py  observer.py  pipeline.py  presenter.py  repository.py  result.py  rules.md  service.py  specification.py  strategy.py  unit_of_work.py  utility.py  validator.py  value_object.py
apis/: __init__.py  json_api_controller.py
apis/product/: __init__.py  fetch.py
apis/v1/: __init__.py  abstraction.py
config/: README.md  validator.py
config/db/: config.json
config/queues/: config.json
config/streams/: config.json
configurations/: README.md  cache.py  db.py  llm.py  security.py  streams.py  vectors.py
constants/: README.md  __init__.py  api_lk.py  api_status.py  default.py  filter_operator.py  payload_type.py  regular_expression.py  response_key.py  response_keys.py
constants/db/: table.py
controllers/: README.md  abstraction.py  example_controller.py  router.py  rules.md
controllers/apis/: __init__.py  abstraction.py  json_api_controller.py
controllers/auth/: abstraction.py  fetch.py
controllers/product/: __init__.py
controllers/user/: __init__.py  abstraction.py  fetch.py  login.py  logout.py  register.py
core/: README.md  __init__.py  docs.py  postman_test_script_engine.py  route_export_engine.py  tasks.py  taxonomy.py
core/dashboard/: layout.py
core/features/: __init__.py  flags.py
core/health/: __init__.py  checks.py  router.py
core/observability/: __init__.py  audit.py  logging.py  metrics.py  tracing.py
core/queues_dashboard/: router.py
core/resilience/: __init__.py  circuit_breaker.py  retry.py
core/security/: __init__.py  api_keys.py  encryption.py  webhooks.py
core/tasks/: __init__.py  queue.py
core/tenancy/: __init__.py  context.py  middleware.py
core/testing/: __init__.py  factories.py  fixtures.py  mocks.py
core/utils/: __init__.py  context.py  optional_imports.py  request_id_context.py
core/versioning/: __init__.py  router.py
core/websockets/: router.py
dependencies/: README.md  __init__.py  auth.py  cache.py  db.py  example_repository.py  example_service.py  rules.md
dependencies/repositiories/: product.py  user.py
dependencies/repositories/: __init__.py  example.py  item.py
dependencies/services/: abstraction.py  mfa.py
dependencies/utilities/: dictionary.py  jwt.py
docs/: README.md  full-docs.md  index.md
docs/api/: ecosystem.md  overview.md
docs/ecosystem/: fast-dashboards.md  fast-database.md  fast-middleware.md  index.md
docs/guide/: api-docs.md  ci-cd.md  cli.md  configuration.md  database.md  docker.md  installation.md  new-api-scaffolding.md  project-structure.md  quickstart.md  testing.md
docs/reference/: index.md
dtos/: README.md  base.py  rules.md
dtos/configurations/: queues.py  security.py  streams.py
dtos/requests/: abstraction.py
dtos/responses/: abstraction.py  base.py
entities/: __init__.py
entities/item/: __init__.py  item_entity.py
errors/: README.md  bad_input_error.py  not_found_error.py  unexpected_response_error.py
example/: __init__.py
example/controllers/: item.py  item_controller.py
example/dependencies/: service_deps.py
example/dtos/: __init__.py  item_dtos.py
example/entities/: item.py
example/repositories/: item.py  item_repository.py
example/services/: item.py  item_service.py
example/testing/: __init__.py  factories.py  fixtures.py
factories/: README.md
fastmvc_cli/: README.md  __init__.py  alembic_utils.py  cli.py  doctor.py  entity_generator.py  generator.py  hooks.py  init_ci.py  pypi_version.py  scaffold_helpers.py
init-scripts/: 01-create-databases.sql
middlewares/: README.md  __init__.py  authentication.py  authetication.py  rate_limit.py  request_context.py  rules.md
migrations/: README.md  env.py
models/: README.md  __init__.py  item.py  product.py  rules.md  user.py
postman/: postman_collection.json
repositories/: README.md  abstraction.py  example_repository.py  item.py  product.py  rules.md  user.py
repositories/item/: __init__.py  abstraction.py  item_repository.py
repositories/user/: abstraction.py  fetch.py  refresh_token_repository.py  subscription_repository.py  user_repository.py
scripts/: git_log_recorder.py  seed.py
services/: README.md  __init__.py  abstraction.py  example_service.py  mfa.py  rules.md
services/apis/: abstraction.py
services/example/: __init__.py  create.py  delete.py  example_service.py  fetch.py  fetch_all.py  update.py
services/item/: __init__.py  abstraction.py  item_service.py
services/llm/: __init__.py  base.py
services/product/: __init__.py  abstraction.py  crud.py
services/queues/: broker.py
services/secrets/: providers.py
services/streams/: __init__.py  abstractions.py  market.py
services/user/: __init__.py  abstraction.py  fetch.py  login.py  logout.py  phone_otp.py  phone_verify_service.py  refresh_token.py  register.py  registration.py  reset_password.py  subscription.py  token_issuance.py
services/vectors/: __init__.py  (+5 more)
static/: launch.html  swagger.html
testing/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_app.py  test_example_item.py
utilities/: README.md  __init__.py  audit.py  cache.py  dictionary.py  jwt.py  mfa.py  phone_otp.py  rules.md  validation.py  webhook_dispatcher.py
(+167 files in other folders)
